[gd_scene load_steps=6 format=3 uid="uid://cqpmbxqgny2kq"]

[ext_resource type="Script" path="res://addons/table_data_editor/src/table_data_editor/export_preview/export_preview_window.gd" id="1_h8l6h"]

[sub_resource type="ButtonGroup" id="ButtonGroup_pxfjs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2ocp7"]

[sub_resource type="InputEventKey" id="InputEventKey_s3ym3"]
pressed = true
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_5m7cm"]
events = [SubResource("InputEventKey_s3ym3")]

[node name="export_preview_window" type="Window"]
title = "Export"
size = Vector2i(800, 400)
wrap_controls = true
exclusive = true
script = ExtResource("1_h8l6h")

[node name="export_preview" type="MarginContainer" parent="."]
editor_description = "导出预览"
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="export_preview"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="export_preview"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="export_preview/MarginContainer"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="export_preview/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 200

[node name="VBoxContainer" type="VBoxContainer" parent="export_preview/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="export_preview/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="select_items" type="HBoxContainer" parent="export_preview/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="csv" type="CheckBox" parent="export_preview/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/HBoxContainer/select_items"]
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_pxfjs")
text = "CSV"

[node name="json" type="CheckBox" parent="export_preview/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/HBoxContainer/select_items"]
layout_mode = 2
button_group = SubResource("ButtonGroup_pxfjs")
text = "JSON"

[node name="VSeparator" type="VSeparator" parent="export_preview/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="selected_item_param" type="HBoxContainer" parent="export_preview/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="csv" type="HBoxContainer" parent="export_preview/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/HBoxContainer/selected_item_param"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="export_preview/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/HBoxContainer/selected_item_param/csv"]
layout_mode = 2
text = "delim"

[node name="LineEdit" type="LineEdit" parent="export_preview/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/HBoxContainer/selected_item_param/csv"]
layout_mode = 2
text = ","
placeholder_text = "表格间的分隔符，默认为 ,"

[node name="head_as_key_panel" type="HBoxContainer" parent="export_preview/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/HBoxContainer/selected_item_param"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="export_preview/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/HBoxContainer/selected_item_param/head_as_key_panel"]
layout_mode = 2
tooltip_text = "作为 key 的行"
text = "Key Row: "

[node name="head_line_box" type="SpinBox" parent="export_preview/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/HBoxContainer/selected_item_param/head_as_key_panel"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "作为 key 的行"
min_value = 1.0
max_value = 10000.0
value = 1.0

[node name="compact" type="CheckBox" parent="export_preview/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/HBoxContainer/selected_item_param/head_as_key_panel"]
unique_name_in_owner = true
visible = false
layout_mode = 2
tooltip_text = "紧凑的格式导出，这样JSON会占用空间会最小。数据量不是非常大可以不用勾选"
text = "compact"

[node name="Label" type="Label" parent="export_preview/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0.462745)
layout_mode = 2
text = "Sample data in the first few lines..."

[node name="text_box" type="TextEdit" parent="export_preview/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
editable = false

[node name="HBoxContainer" type="HBoxContainer" parent="export_preview/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="export_preview/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="export" type="Button" parent="export_preview/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
text = "Export"

[node name="VSeparator" type="VSeparator" parent="export_preview/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxEmpty_2ocp7")

[node name="cancel" type="Button" parent="export_preview/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
shortcut = SubResource("Shortcut_5m7cm")
text = "Cancel"

[node name="Control3" type="Control" parent="export_preview/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="save_dialog" type="FileDialog" parent="."]
unique_name_in_owner = true
size = Vector2i(375, 161)
access = 2
filters = PackedStringArray("*.json; JSON", "*.csv; CSV")

[connection signal="value_changed" from="export_preview/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/HBoxContainer/selected_item_param/head_as_key_panel/head_line_box" to="export_preview" method="_on_head_line_box_value_changed" flags=18]
[connection signal="pressed" from="export_preview/MarginContainer/VBoxContainer/HBoxContainer/export" to="." method="_on_export_pressed"]
[connection signal="pressed" from="export_preview/MarginContainer/VBoxContainer/HBoxContainer/cancel" to="." method="_on_cancel_pressed"]
[connection signal="file_selected" from="save_dialog" to="." method="_on_save_dialog_file_selected"]
